# bygeon

./: .gitignore  README.md  bygeon.example.toml  pygeon.example.toml  pyproject.toml  requirements.txt
bygeon/: __main__.py  hub.py  logger.py  main.py  message.py  util.py
bygeon/messenger/: cqhttp.py  discord.py  messenger.py  slack.py
bygeon/messenger/definition/: cqhttp.py  discord.py  slack.py
pygeon/: __main__.py  hub.py  message.py  util.py
pygeon/messenger/: cqhttp.py  discord.py  messenger.py  slack.py
pygeon/messenger/definition/: cqhttp.py  discord.py  slack.py
